# langchain-skills-adapter

./: .gitignore  README.md  pyproject.toml
langchain_skills/: __init__.py  exceptions.py
langchain_skills/core/: __init__.py  loader.py  skill.py  validator.py
langchain_skills/tools/: __init__.py  skill_tool.py
langchain_skills/utils/: __init__.py  markdown_parser.py
tests/: conftest.py
tests/fixtures/invalid_skill_bad_name/: SKILL.md
tests/fixtures/invalid_skill_no_frontmatter/: SKILL.md
tests/fixtures/multiple_skills/nested/skill-three/: SKILL.md
tests/fixtures/multiple_skills/skill-one/: SKILL.md
tests/fixtures/multiple_skills/skill-two/: SKILL.md
tests/fixtures/valid_skill/: SKILL.md
tests/integration/: test_end_to_end.py  test_pptx_skill_scenarios.py
tests/unit/: __init__.py  test_loader.py  test_markdown_parser.py  test_skill.py  test_skill_tool.py  test_validator.py
